revisiting_rainbow/wandb/run-20210827_163245-1avz0c83/files/output.log
Traceback (most recent call last):
  File "wandb_example.py", line 20, in <module>
    from wandb_runner import WandBRunner
  File "/home/joaoguilhermearujo/rainbow_extend/revisiting_rainbow/wandb_runner.py", line 49
    'Eval/AverageReturns': average_reward_eval})
                        ^
SyntaxError: invalid syntax